--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-opencv-python-headless==4.8.1.78
 ultralytics==8.1.0
-streamlit
-numpy
-Pillow
-torch
+opencv-python-headless==4.8.1.78
+numpy==1.26.4
+torch==2.1.2
+torchvision==0.16.2
+Pillow==10.3.0
+streamlit==1.32.0
+matplotlib
+pyyaml
+tqdm
+psutil
